--- a/Presentacion/beamerthemehsrm.sty
+++ b/Presentacion/beamerthemehsrm.sty
@@ -82,10 +82,11 @@
 \setbeamercolor{alerted text}{fg=hsrmRed}
 \setbeamercolor{example text}{fg=white}
 \setbeamercolor{copyright text}{fg=hsrmWarmGreyLight}
+% Palettes
 \setbeamercolor{palette primary}{fg=hsrmWarmGreyDark}
 \setbeamercolor{palette secondary}{fg=hsrmWarmGreyDark,bg=hsrmWarmGreyLight}
 \setbeamercolor{palette tertiary}{fg=black,bg=hsrmWarmGreyLight}
-\setbeamercolor{palette quaternary}{fg=white, bg=hsrmWarmGreyDark}
+\setbeamercolor{palette quaternary}{fg=white, bg=hsrmRedDark}
 % Titlepage
 \setbeamercolor{title}{parent=normal text}
 \setbeamercolor{subtitle}{parent=normal text}
@@ -93,7 +94,7 @@
 % Content
 \setbeamercolor{frametitle}{parent=palette quaternary}
 % Blocks
-\setbeamercolor{block title}{parent=palette quaternary}
+\setbeamercolor{block title}{fg=white, bg=hsrmWarmGreyDark}
 \setbeamercolor{block body}{parent=palette secondary}
 \setbeamercolor{block title example}{fg=white, bg=hsrmSec1Dark}
 \setbeamercolor{block body example}{fg=white, bg=hsrmSec1}
@@ -221,10 +222,11 @@
 \AtBeginSection[]
 {
 \begingroup
-\setbeamercolor{background canvas}{bg=hsrmWarmGreyDark}
+\setbeamercolor{background canvas}{bg=hsrmRedDark, fg=white}
 \begin{frame}[plain]
 \centering
-\vfill\usebeamerfont{section title}\textcolor{white}{\insertsection}\vfill
+\vfill\vspace{2cm}\usebeamerfont{section title}\textcolor{white}{\insertsection}\vfill
+%\setbeamerfont{font temp}{size=\small}{\tableofcontents[currentsection,sectionstyle=show/hide,subsectionstyle=show]}
 \end{frame}
 \endgroup
 }
