logos y algo de Introducción

--- a/Presentacion/beamerthemehsrm.sty
+++ b/Presentacion/beamerthemehsrm.sty
@@ -175,8 +175,9 @@
 	\AddToShipoutPictureFG*{\includegraphics[width=\paperwidth]{background.pdf}}
 	\begin{minipage}[b][\paperheight]{\textwidth}
 	\vspace*{5mm}
-	\includegraphics[height=14mm]{logo.png}\par
-	\vspace*{5mm}
+	\includegraphics[height=20mm]{../Figures/Presentacion/logoFing.png}
+	\hfill\includegraphics[height=20mm]{../Figures/Presentacion/logoUncu.png}\par
+	\vspace*{1mm}
 	\ifx\insertsubtitle\@empty%
 	\else%
 		{\usebeamerfont{title}\usebeamercolor[fg]{title}\MakeUppercase{\inserttitle}\par}%
