--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -4,6 +4,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
 \usepackage{graphicx}
+\usepackage{tabularx}
 \usepackage[spanish]{babel}
 \usepackage[absolute,overlay]{textpos}
 \usepackage{epstopdf}
@@ -17,7 +18,7 @@
  
 \usetheme[noflama]{hsrm} 
 
-\setbeameroption{show notes}
+%\setbeameroption{show notes}
 
 \title[Estudio de un Metal Amorfo]{Estudio Termo - Mec\'anico de un Metal Amorfo}
 \subtitle{Simulaciones Atom\'isticas}
