un poquito mas de nanoparticles

--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -52,27 +52,57 @@
 
 \begin{frame}
  \frametitle{Resultados}
- \framesubtitle{Difusividad vs Temperatura}
- \vspace{0.5cm}
- \begin{figure}[htp]
+ 
+ \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
+      \begin{figure}[htp]
+	\centering
+	\subfloat[Bajas Temperaturas]{
+	\includegraphics[width=6.3cm]{../Figures/Cap_4/msd10_400_FCC.png}}
+	\subfloat[Altas Temperaturas]{
+	\includegraphics[width=6.3cm]{../Figures/Cap_4/msd500_800_FCC.png}}
+      \end{figure}
+    \end{textblock*}
+    \begin{textblock*}{10cm}(1.5cm,8cm) 
     \centering
-    \begin{tabular}{c}
-      \subfloat[Bajas Temperaturas]{
-	      \includegraphics[width=5cm]{../Figures/Cap_4/msd10_400_FCC.png}}
-    \quad
-      \subfloat[Altas Temperaturas]{
-	      \includegraphics[width=5cm]{../Figures/Cap_4/msd500_800_FCC.png}}
-    \end{tabular}
-  \end{figure} 
+      Desplazamientos cuadráticos medios para la nanopartícula Cu-FCC
+ \end{textblock*}
 \end{frame}
 
 \begin{frame}
  \frametitle{Resultados}
- \framesubtitle{Difusividad vs Temperatura}
- \vspace{0.5cm}
- \begin{figure}
-   \centering
-   \includegraphics[width=7cm]{../Figures/Cap_4/FCCDiff_vs_temp_fit.png}
-  \end{figure}
+ 
+ \begin{textblock*}{12.6cm}(-0.08cm,1.5cm) 
+      \begin{figure}[htp]
+	\centering
+	\subfloat[Bajas Temperaturas]{
+	\includegraphics[width=6.3cm]{../Figures/Cap_4/msd10_400_B2.png}}
+	\subfloat[Altas Temperaturas]{
+	\includegraphics[width=6.3cm]{../Figures/Cap_4/msd500_800_B2.png}}
+      \end{figure}
+    \end{textblock*}
+    \begin{textblock*}{10cm}(1.5cm,8cm) 
+    \centering
+      Desplazamientos cuadráticos medios para la nanopartícula CuZr-B2
+ \end{textblock*}
+\end{frame}
+
+\begin{frame}
+ \frametitle{Resultados}
+ 
+  \begin{textblock*}{6.5cm}(-0.08cm,2cm) 
+   \begin{figure}[htp]
+    \centering
+    \includegraphics[width=6.3cm]{../Figures/Cap_4/FCCDiff_vs_temp_fit.png}
+   \end{figure}
+  \end{textblock*}
+  \begin{textblock*}{10cm}(1.5cm,8cm) 
+    \centering
+    Difusividad en función de la temperatura para el caso Cu-FCC
+  \end{textblock*}
+  
+  \begin{textblock*}{6cm}(6.5cm,4cm)
+    Modelo usado para la regresión: 
+    $D = D_{0}\cdot \mathrm{e}^{\frac{-\Delta E}{k_{B} T}}$
+  \end{textblock*} 
 \end{frame}
 
