Cambios en acentos para q me compile

--- a/Presentacion/Intro/Intro.tex
+++ b/Presentacion/Intro/Intro.tex
@@ -6,14 +6,14 @@
 %\subsection{Introducci\'on}
 
 \begin{frame}
-\frametitle{Vidrios Metálicos}
+\frametitle{Vidrios Met\'alicos}
 
 \begin{itemize}
  \item Metal de estructura amorfa
  \item Basado en Cu, Ni, Fe, Au, Zr, Be, La, Pd, Ti
- \item Puede estar combinado en baja proporción con no metales como Bo, Si y P
- \item Combina propiedades de las cerámicas y de los metales
- \item Sus propiedades sobresalientes los hacen candidatos para aplicaciones modernas y de alta tecnología
+ \item Puede estar combinado en baja proporci\'on con no metales como Bo, Si y P
+ \item Combina propiedades de las cer\'amicas y de los metales
+ \item Sus propiedades sobresalientes los hacen candidatos para aplicaciones modernas y de alta tecnolog\'ia
 \end{itemize}
 \end{frame}
 
@@ -54,35 +54,35 @@
 }
 
 \begin{frame}
-\frametitle{Propiedades de los Vidrios Metálicos}
+\frametitle{Propiedades de los Vidrios Met\'alicos}
 \begin{overprint}
  
 \ventaja{1}{Ausencia de efectos adversos debidos a fronteras de granos}
-\desventaja{1}{Alto costo y grandes limitaciones de fabricación}
+\desventaja{1}{Alto costo y grandes limitaciones de fabricaci\'on}
     
-\ventaja{2}{Alta dureza. Resistencia al desgaste y la abrasión. Gran resistencia mecánica y menor rigidez que las aleaciones cristalinas. Alta resiliencia}
-\desventaja{2}{Gran pérdida de ductilidad ante la aparición de bandas de corte. El recocido lo vuelve frágil}
+\ventaja{2}{Alta dureza. Resistencia al desgaste y la abrasi\'on. Gran resistencia mec\'anica y menor rigidez que las aleaciones cristalinas. Alta resiliencia}
+\desventaja{2}{Gran p\'erdida de ductilidad ante la aparici\'on de bandas de corte. El recocido lo vuelve fr\'agil}
 
-\ventaja{3}{Resistencia a la corrosión debido a la falta de bordes de grano}
+\ventaja{3}{Resistencia a la corrosi\'on debido a la falta de bordes de grano}
 \ventaja{3}{Algunos MG son biocompatibles}
 
 \end{overprint}
 \end{frame}
 
 \begin{frame}
- \frametitle{Algunas aplicaciones de Vidrios Metálicos}
+ \frametitle{Algunas aplicaciones de Vidrios Met\'alicos}
  
  \begin{figure}
  \centering
  \begin{tabularx}{\textwidth}{ccc}
  \only<1>{
- \subfloat[Filo estándar]{
+ \subfloat[Filo est\'andar]{
     \includegraphics[width=3cm]{../Figures/Cap_1/blade.png}}
   &
   \subfloat[Filo de BMG]{
     \includegraphics[width=3cm]{../Figures/Cap_1/BMG-blade.png}}
   &
-  \subfloat[Joyería]{
+  \subfloat[Joyer\'ia]{
     \includegraphics[width=3cm]{../Figures/Cap_1/seamaster.png}}
   }
   \only<2>{
