--- a/Presentacion/Nanoparticles/Nanoparticles.tex
+++ b/Presentacion/Nanoparticles/Nanoparticles.tex
@@ -6,16 +6,16 @@
 %\subsection{BMG con nanopart\'iculas embebidas}
 
 \begin{frame}
-  \frametitle{Introducción}
+  \frametitle{Introducci\'on}
   \begin{itemize}
-   \item La plasticidad es dominada por STZs que crecen y colapsan en SBs las cuales conducen a una falla frágil del material.
-   \item Para homogeneizar el régimen plástico y evitar esto, la composición se modifica de diferentes maneras
+   \item La plasticidad es dominada por STZs que crecen y colapsan en SBs las cuales conducen a una falla fr\'agil del material.
+   \item Para homogeneizar el r\'egimen pl\'astico y evitar esto, la composici\'on se modifica de diferentes maneras
   \end{itemize}
   \vspace{-1cm}
   \begin{figure}[htp]
     \centering
     \begin{tabular}{c}
-      \subfloat[Nano partículas \cite{Albe13}]{
+      \subfloat[Nano part\'iculas \cite{Albe13}]{
 	      \includegraphics[width=5cm]{../Figures/Presentacion/nanoparticles_example.png}
 	      \label{P:fg:B2Crystal}}
     \quad
@@ -31,37 +31,37 @@
 \frametitle{Objetivos del estudio}
 \vspace{0.5cm}
  \begin{itemize}
-  \item Estabilidad térmica de las nanopartículas (difusión del material cristalino en la matriz amorfa).
-  \item Impacto en el comportamiento mecánico de la muestra (cambios en curvas tensión-deformación)
-  \item Distribución de la tensión de corte en la muestra.
+  \item Estabilidad t\'ermica de las nanopart\'iculas (difusi\'on del material cristalino en la matriz amorfa).
+  \item Impacto en el comportamiento mec\'anico de la muestra (cambios en curvas tensi\'on-deformaci\'on)
+  \item Distribuci\'on de la tensi\'on de corte en la muestra.
  \end{itemize}
 \end{frame}
 
 \begin{frame}
- \frametitle{Detalles de la simulación}
+ \frametitle{Detalles de la simulaci\'on}
  \vspace{0.5cm}
  \begin{itemize}
-  \item Muestra original ya caracterizada: Cu$_{46}$Zr$_{54}$ - 160k átomos
-  \item Condiciones de bordes periódicas en las tres dimensiones
-  \item Nanopartículas: Esferas de 2 nm de radio de composición (a) Cu-FCC y (b) CuZr-B2
+  \item Muestra original ya caracterizada: Cu$_{46}$Zr$_{54}$ - 160k \'atomos
+  \item Condiciones de bordes peri\'odicas en las tres dimensiones
+  \item Nanopart\'iculas: Esferas de 2 nm de radio de composici\'on (a) Cu-FCC y (b) CuZr-B2
   \item La constante de red del cobre se establece en 0.3615 nm
-  \item La estructura CuZr-B2 se genera ad-hoc para la simulación y da como resultado una constante de 0.3283 nm
-  \item Velocidad de deformación de 10$^{9}$/s
+  \item La estructura CuZr-B2 se genera ad-hoc para la simulaci\'on y da como resultado una constante de 0.3283 nm
+  \item Velocidad de deformaci\'on de 10$^{9}$/s
  \end{itemize}
 \end{frame}
 
 \begin{frame}
- \frametitle{Preparación de cristal CuZr-B2}
+ \frametitle{Preparaci\'on de cristal CuZr-B2}
  \only<1>{
   \begin{itemize}
     \item Cubo cristalino aislado de 15 celdas unitarias de ancho
     \item Constante de celda de 3.50 \AA{} \cite{inoue04}
     \item PBC en las tres dimensiones
-    \item Minimizado de energía y relajación a presión cero.
+    \item Minimizado de energ\'ia y relajaci\'on a presi\'on cero.
     \item T$_{i}$ = 1100 K \cite{pauly10} (988 K $\leq$ T$_{B2}$ $\leq$ 1200 K)
     \item Se equilibra a P = 0 y T = T$_{B2}$ en 100 ps
     \item Recocido a T = T$_{B2}$ por 150 ps
-    \item Enfriado rápido a 10$^{12}$ K/s hasta 300 K
+    \item Enfriado r\'apido a 10$^{12}$ K/s hasta 300 K
   \end{itemize}
   }
   \only<2>{
@@ -72,13 +72,13 @@
     \hline
     Velocidad de enfriamiento [K/s] & 10$^{12}$ \\
     \hline
-    Número de átomos & 6750 \\
+    N\'umero de \'atomos & 6750 \\
     \hline
     Constante de celda [\AA] & 3.283 \\
     \hline
-    Energía total (eV) & -34012.8 \\
+    Energ\'ia total (eV) & -34012.8 \\
     \hline
-    Energía de cohesión (eV) & -5.04 \\
+    Energ\'ia de cohesi\'on (eV) & -5.04 \\
     \hline
     \end{tabular}
     \end{center}
@@ -87,7 +87,7 @@
   
   \begin{textblock*}{12cm}(0cm,7cm) 
     \centering
-      Parámetros obtenidos para el cristal CuZr (B2)
+      Par\'ametros obtenidos para el cristal CuZr (B2)
   \end{textblock*}
   }
   \only<3>{
@@ -96,13 +96,13 @@
 	\centering
 	\subfloat[Cristal]{
 	\includegraphics[height=5cm]{../Figures/Cap_4/B2_FreeBoundaries.png}}
-	\subfloat[Energía de cohesión vs tiempo]{
+	\subfloat[Energ\'ia de cohesi\'on vs tiempo]{
 	\includegraphics[width=6.3cm]{../Figures/Cap_4/B2CrystalTest_FreeBoundariesSphere.pdf}}
       \end{figure}
     \end{textblock*}
     \begin{textblock*}{10cm}(1.5cm,8.5cm) 
     \centering
-      Verificación del cristal CuZr-B2
+      Verificaci\'on del cristal CuZr-B2
   \end{textblock*}
   }
 \end{frame}
@@ -133,7 +133,7 @@
     \end{textblock*}
     \begin{textblock*}{10cm}(1.5cm,8cm) 
     \centering
-      Desplazamientos cuadráticos medios para la nanopartícula Cu-FCC
+      Desplazamientos cuadr\'aticos medios para la nanopart\'icula Cu-FCC
  \end{textblock*}
 \end{frame}
 
@@ -151,7 +151,7 @@
     \end{textblock*}
     \begin{textblock*}{10cm}(1.5cm,8cm) 
     \centering
-      Desplazamientos cuadráticos medios para la nanopartícula CuZr-B2
+      Desplazamientos cuadr\'aticos medios para la nanopart\'icula CuZr-B2
  \end{textblock*}
 \end{frame}
 
@@ -166,14 +166,14 @@
   \end{textblock*}
   \begin{textblock*}{10cm}(1.5cm,8cm) 
     \centering
-    Difusividad en función de la temperatura para el caso Cu-FCC
+    Difusividad en funci\'on de la temperatura para el caso Cu-FCC
   \end{textblock*}
   
   \begin{textblock*}{6cm}(6.5cm,3cm)
-    Modelo usado para la regresión: \\
+    Modelo usado para la regresi\'on: \\
     $D = D_{0}\cdot \mathrm{e}^{\frac{-\Delta E}{k_{B} T}}$\\
     \vspace{0.5cm}
-    Resultados de la regresión:
+    Resultados de la regresi\'on:
     \begin{table}[htp]
       \begin{center}
       \begin{tabular}{*{2}{c}}
@@ -204,7 +204,7 @@
     \end{textblock*}
     \begin{textblock*}{12cm}(0.5cm,8.5cm) 
     \centering
-      Tensión de Von Mises vs deformación para el BMG sin inclusión (línea punteada) y una inclusión de Cu-FCC (línea sólida)
+      Tensi\'on de Von Mises vs deformaci\'on para el BMG sin inclusi\'on (l\'inea punteada) y una inclusi\'on de Cu-FCC (l\'inea s\'olida)
     \end{textblock*}
    }
    \only<2>{
@@ -219,7 +219,7 @@
     \end{textblock*}
     \begin{textblock*}{12cm}(0.5cm,8.5cm) 
     \centering
-      Tensión de Von Mises vs deformación para el BMG sin inclusión (línea punteada) y una inclusión de CuZr-B2 (línea sólida)
+      Tensi\'on de Von Mises vs deformaci\'on para el BMG sin inclusi\'on (l\'inea punteada) y una inclusi\'on de CuZr-B2 (l\'inea s\'olida)
     \end{textblock*}
    }
 \end{frame}
