--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -52,11 +52,11 @@
 \input{Comput/Comput.tex}
 \input{Conclusiones/Conclusiones.tex}
 
-\section{Bibliografía}
-\begin{frame}
-  \tiny{\bibliographystyle{apalike}}
-  \bibliography{../Bibliography}
-\end{frame}
+%\section{Bibliografía}
+%\begin{frame}
+%  \tiny{\bibliographystyle{apalike}}
+%  \bibliography{../Bibliography}
+%\end{frame}
 
 %%%
 % Slide de titulo
