--- a/Presentacion/presentacion.tex
+++ b/Presentacion/presentacion.tex
@@ -14,7 +14,7 @@
 
 \setbeamertemplate{bibliography item}{\insertbiblabel}
 
-\usetikzlibrary{shapes}
+\usetikzlibrary{arrows,shapes}
  
 \usetheme[noflama]{hsrm} 
 
